--- a/index.html
+++ b/index.html
@@ -30,31 +30,67 @@
     </div>
 </nav>
 
-<div class="container ">
-    <ul class="collapsible collection" data-collapsible="accordion" id="fixtures">
-    </ul>
-    <a href="http://resources.fifa.com/mm/document/tournament/competition/02/66/71/62/2018fwc_matchschedule_20122017_en_neutral.pdf" class="waves-effect waves-light btn"><i class="material-icons right">list</i>Official Schedule</a>
+<div class="row">
+    <div class="col s12 m6">
+        <div class="container ">
+            <ul class="collapsible collection" data-collapsible="accordion" id="fixtures">
+            </ul>
+            <a href="http://resources.fifa.com/mm/document/tournament/competition/02/66/71/62/2018fwc_matchschedule_20122017_en_neutral.pdf" class="waves-effect waves-light btn"><i class="material-icons right">list</i>Official Schedule</a>
+        </div>
+    </div>
+
+    <div class="col s12 m6">
+    <table class="countdownContainer">
+        <tr class="info">
+            <td colspan="4">World Cup Countdown</td>
+        </tr>
+        <tr class="info">
+            <td id="days"></td>
+            <td id="hours"></td>
+            <td id="minutes"></td>
+            <td id="seconds"></td>
+        </tr>
+        <tr>
+            <td>Days</td>
+            <td>Hours</td>
+            <td>Minutes</td>
+            <td>Seconds</td>
+        </tr>
+    </table>
+    </div>
 </div>
 
-<table class="countdownContainer">
-    <tr class="info">
-        <td colspan="4">World Cup Countdown</td>
-    </tr>
-    <tr class="info">
-        <td id="days"></td>
-        <td id="hours"></td>
-        <td id="minutes"></td>
-        <td id="seconds"></td>
-    </tr>
-    <tr>
-        <td>Days</td>
-        <td>Hours</td>
-        <td>Minutes</td>
-        <td>Seconds</td>
-    </tr>
-</table>
+<div class="row">
+    <div class="col s12">
+        <div class="jumbotron" >
 
-    <script type="text/javascript" src="assets/js/app.js"></script>
+            <h1 class="display-3">World Cup News!</h1>
+            <p class="lead">This is a search section for World Cup news by national teams participating in Russia 2018.</p>
+            <hr>
+            <p>Click on the Buttom of the team of your interest</p>
+            <!--<div id="container">-->
+            <div id="button-team">
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col s12 m6">
+        <!--youtube video here-->
+        <div id="video-team">
+        </div>
+    </div>
+
+    <div class="col s12 m6">
+        <!--Teams news will be dump here-->
+        <div id="news-team">
+        </div>
+    </div>
+</div>
+
+
+<script type="text/javascript" src="assets/js/app.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 </body>
 
