--- a/index.html
+++ b/index.html
@@ -29,11 +29,25 @@
         </ul>
     </div>
 </nav>
-
 <div class="row">
+    <div class="col s12">
+        <div class="jumbotron" >
+
+            <h1 class="display-3">World Cup News!</h1>
+            <p class="lead">This is a search section for World Cup news by national teams participating in Russia 2018.</p>
+            <hr>
+            <p>Click on the Buttom of the team of your interest</p>
+            <!--<div id="container">-->
+            <div id="button-team">
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row content">
     <div class="col s12 m6">
         <div class="container ">
-            <ul class="collapsible collection" data-collapsible="accordion" id="fixtures">
+            <ul class="collapsible collection content" data-collapsible="accordion" id="fixtures">
             </ul>
             <a href="http://resources.fifa.com/mm/document/tournament/competition/02/66/71/62/2018fwc_matchschedule_20122017_en_neutral.pdf" class="waves-effect waves-light btn"><i class="material-icons right">list</i>Official Schedule</a>
         </div>
@@ -60,20 +74,6 @@
     </div>
 </div>
 
-<div class="row">
-    <div class="col s12">
-        <div class="jumbotron" >
-
-            <h1 class="display-3">World Cup News!</h1>
-            <p class="lead">This is a search section for World Cup news by national teams participating in Russia 2018.</p>
-            <hr>
-            <p>Click on the Buttom of the team of your interest</p>
-            <!--<div id="container">-->
-            <div id="button-team">
-            </div>
-        </div>
-    </div>
-</div>
 <div class="row">
     <div class="col s12 m6">
         <!--youtube video here-->
