color updated, button moved, countdown centered, title moved...more coming

--- a/index.html
+++ b/index.html
@@ -1,97 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <title>World Cup 2018</title>
-
-
-    <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-    <script src="https://use.fontawesome.com/0c445645e8.js"></script>
-    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/locale/af.js"></script>
-
+	<head>
+		<meta charset="utf-8">
+		<title>World Cup 2018</title>
+		<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+		<script src="https://use.fontawesome.com/0c445645e8.js"></script>
+		<script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/locale/af.js"></script>
+	</head>
 </head>
-</head>
-
 <body>
-<nav>
-    <div class="nav-wrapper">
-        <a href="#" class="brand-logo"><img src="https://storify.com/services/proxy/2/s-7WkrFMGILqux_QfsnyUg/http/pbs.twimg.com/media/B1G1qS_IUAEJa5O.jpg"></a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="sass.html">Sass</a></li>
-            <li><a href="badges.html">Components</a></li>
-            <li><a href="collapsible.html">JavaScript</a></li>
-        </ul>
-    </div>
-</nav>
-<div class="row">
-    <div class="col s12">
-        <div class="jumbotron" >
-
-            <h1 class="display-3">World Cup News!</h1>
-            <p class="lead">This is a search section for World Cup news by national teams participating in Russia 2018.</p>
-            <hr>
-            <p>Click on the Buttom of the team of your interest</p>
-            <!--<div id="container">-->
-            <div id="button-team">
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="row content">
-    <div class="col s12 m6">
-        <div class="container ">
-            <ul class="collapsible collection content" data-collapsible="accordion" id="fixtures">
-            </ul>
-            <a href="http://resources.fifa.com/mm/document/tournament/competition/02/66/71/62/2018fwc_matchschedule_20122017_en_neutral.pdf" class="waves-effect waves-light btn"><i class="material-icons right">list</i>Official Schedule</a>
-        </div>
-    </div>
-
-    <div class="col s12 m6">
-    <table class="countdownContainer">
-        <tr class="info">
-            <td colspan="4">World Cup Countdown</td>
-        </tr>
-        <tr class="info">
-            <td id="days"></td>
-            <td id="hours"></td>
-            <td id="minutes"></td>
-            <td id="seconds"></td>
-        </tr>
-        <tr>
-            <td>Days</td>
-            <td>Hours</td>
-            <td>Minutes</td>
-            <td>Seconds</td>
-        </tr>
-    </table>
-    </div>
-</div>
-
-<div class="row">
-    <div class="col s12 m6">
-        <!--youtube video here-->
-        <div id="video-team">
-        </div>
-    </div>
-
-    <div class="col s12 m6">
-        <!--Teams news will be dump here-->
-        <div id="news-team">
-        </div>
-    </div>
-</div>
-
-
-<script type="text/javascript" src="assets/js/app.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
+	<nav>
+		<div class="nav-wrapper red darken-4">
+			<a href="#" class="brandLogo"><img src="https://storify.com/services/proxy/2/s-7WkrFMGILqux_QfsnyUg/http/pbs.twimg.com/media/B1G1qS_IUAEJa5O.jpg"></a>
+			<div class="header">World Cup News!</div>
+			<ul id="nav-mobile" class="right hide-on-med-and-down">
+				<li><a href="sass.html">Sass</a></li>
+				<li><a href="badges.html">Components</a></li>
+				<li><a href="collapsible.html">JavaScript</a></li>
+			</ul>
+			
+		</div>
+	</nav>
+	<div class="row">
+		<div class="col s12">
+			<div class="jumbotron" >
+				<!--             <h1 class="display-3">World Cup News!</h1>
+				<p class="lead">This is a search section for World Cup news by national teams participating in Russia 2018.</p>
+				<hr> -->
+				<!-- <p>Click on the Buttom of the team of your interest</p> -->
+				<!--<div id="container">-->
+				<div id="button-team">
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="row content">
+		<div class="col s12 m6">
+			<div class="container ">
+				<a href="http://resources.fifa.com/mm/document/tournament/competition/02/66/71/62/2018fwc_matchschedule_20122017_en_neutral.pdf" class="waves-effect waves-light btn"><i class="material-icons right">list</i>Official Schedule</a>
+				<ul class="collapsible collection content" data-collapsible="accordion" id="fixtures">
+				</ul>
+			</div>
+		</div>
+		<div class="col s12 m6">
+			<table class="countdownContainer">
+				<tr class="info">
+					<td class="Countdown-header" colspan="4">World Cup Countdown</td>
+				</tr>
+				<tr class="info">
+					<td id="days"></td>
+					<td id="hours"></td>
+					<td id="minutes"></td>
+					<td id="seconds"></td>
+				</tr>
+				<tr>
+					<td class="days">Days</td>
+					<td class="hours">Hours</td>
+					<td class="minutes">Minutes</td>
+					<td class="seconds">Seconds</td>
+				</tr>
+			</table>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col s12 m6">
+			<!--youtube video here-->
+			<div id="video-team">
+			</div>
+		</div>
+		<div class="col s12 m6">
+			<!--Teams news will be dump here-->
+			<div id="news-team">
+			</div>
+		</div>
+	</div>
+	<script type="text/javascript" src="assets/js/app.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </body>
-
 </html>
