--- a/index.html
+++ b/index.html
@@ -29,28 +29,25 @@
 		</div>
 	</nav>
 	
-<!-- <div class="container"> -->
-	    <div class="row">
-
-      <div class="col s3">
-        <!-- Grey navigation panel -->
-        <div class="jumbotron" >
-
+	<div class="container">
+	<div class="row">
+		<div class="col s3">
+			<!-- Grey navigation panel -->
+			<div class="jumbotron" >
 				<div id="button-team">
 				</div>
 			</div>
-      </div>
-
-      <div class="col s9">
-        <table class="countdownContainer">
+		</div>
+		<div class="col s9">
+			<table class="countdownContainer">
 				<tr class="info">
 					<td class="Countdown-header" colspan="4">World Cup Countdown</td>
 				</tr>
 				<tr class="info">
-					<td id="days"></td>
-					<td id="hours"></td>
-					<td id="minutes"></td>
-					<td id="seconds"></td>
+					<td class="days" id="days"></td>
+					<td class="hours" id="hours"></td>
+					<td class="minutes" id="minutes"></td>
+					<td class="seconds" id="seconds"></td>
 				</tr>
 				<tr>
 					<td class="days">Days</td>
@@ -59,22 +56,19 @@
 					<td class="seconds">Seconds</td>
 				</tr>
 			</table>
-        <!-- <div class="container "> -->
-				
-				<ul class="collapsible collection content" data-collapsible="accordion" id="fixtures">
-				</ul>
+			<!-- <div class="container "> -->
+			
+			<ul class="collapsible collection content" data-collapsible="accordion" id="fixtures">
+			</ul>
 			<!-- </div> -->
-
-		
+			
 			<div id="video-team"></div>
 			
 			<div id="news-team"></div>
-
-      </div>
-
-    </div>
-<!-- </div> -->
-<script type="text/javascript" src="assets/js/app.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		</div>
+	</div>
+	</div>
+	<script type="text/javascript" src="assets/js/app.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </body>
 </html>
